fix spacing on press page

--- a/themes/bootstrap/css/press.css
+++ b/themes/bootstrap/css/press.css
@@ -220,6 +220,7 @@
 	width: 60%;
 	max-width: 700px;
 	margin: 0 auto;
+  padding: 10px 0 30px;
 }
 
 .content.main {
